--- a/replica_cocacola/css/style.css
+++ b/replica_cocacola/css/style.css
@@ -47,10 +47,15 @@ main {
 }
 
 .container-header {
-  padding: 10px;
+}
+
+.logo {
+  cursor: pointer;
 }
 
 .navegation-header {
+  margin: 0px 15%;
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -58,26 +63,94 @@ main {
 }
 
 .navegacion-lista {
-  display: block;
-  list-style-type: none;
+  display: flex;
+  list-style: none;
+  gap: 10px;
+  min-width: 307px;
+}
+
+.navegacion-lista li {
+  position: relative;
+  padding: 20px 0px;
 }
 
 .marcas {
   display: inline-block;
+  cursor: pointer;
 }
 
-.descubri {
-  display: inline-block;
+.navegacion-lista > li > a {
+  text-decoration: none;
+  padding: 10px;
 }
 
-.impacto {
-  display: inline-block;
+.sub-lista {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: white;
+  width: max-content;
+  max-width: max-content;
+  padding: 20px;
 }
 
-.comprar {
-  display: inline-block;
+.sub-lista li {
+  padding: 0;
+  list-style: none;
+}
+
+.sub-lista li a {
+  font-size: 10px;
+  color: black;
+}
+
+.desplegable a {
+  cursor: pointer;
+}
+
+.desplegable:hover .sub-lista {
+  display: block;
+}
+
+.sub-lista li a:hover {
+  font-weight: bold;
 }
 
 .login {
-  margin-left: 50%;
+  display: flex;
+  height: 100%;
+  margin-left: 40%;
+  cursor: pointer;
+}
+
+.login-image-container {
+  padding: 20px 0px;
+}
+
+.desplegable {
+}
+
+.subrayado {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.subrayado::before {
+  content: "";
+  position: absolute;
+  bottom: 0%;
+
+  height: 3px;
+  width: 70%;
+  min-width: 30px;
+  background-color: black;
+  transform: scale(0);
+  transform-origin: center;
+  transition: all 0.4s ease;
+}
+
+.subrayado:hover::before {
+  transform: scaleX(1);
 }
