--- a/replica-figma/css/index.css
+++ b/replica-figma/css/index.css
@@ -1,25 +1,57 @@
 @import url("./globals.css");
 
-body {
-  background-color: var(--background);
-}
-
-.section-contact {
-  background: var(--gradient-background);
-  color: #ededed;
-  width: 90vw;
-  margin: 5vh auto;
-  border-radius: 10px;
-  padding: 40px;
-  gap: 10px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .section-contact h2 {
   text-align: center;
   font-size: var(--title-font-size);
+}
+
+.service-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.service-container h2 {
+  margin-bottom: 10px;
+}
+
+.service-card {
+  color: var(--text-color);
+  background-color: var(--surface-secondary);
+  width: 90vw;
+  padding: 15px;
+  border-radius: 8px;
+  border: 1px solid var(--border);
+  margin: 0 auto;
+  margin-bottom: 20px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.service-card p {
+  color: var(--secondary-text-color);
+}
+
+.service-card button {
+  margin: 20px 0;
+}
+
+.company-container {
+  background-color: var(--surface-secondary);
+  padding: 15px 30px;
+  border-radius: 10px;
+  border: 1px solid var(--border);
+  margin-top: 15px;
+
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.company {
+  background-color: var(--surface-tertiary);
+  border-radius: 5px;
+  min-width: 65px;
+  min-height: 30px;
 }
