--- a/replica-figma/css/contact.css
+++ b/replica-figma/css/contact.css
@@ -11,6 +11,7 @@ h2 {
   border-radius: 10px;
   padding: 15px;
   margin-bottom: 20px;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -44,6 +45,7 @@ h2 {
   padding: 15px;
   margin-bottom: 20px;
   font-size: var(--normal-font);
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -56,7 +58,23 @@ h2 {
   border-radius: 10px;
   padding: 50px 0;
   font-size: var(--normal-font);
+  width: 100%;
 
   display: flex;
   justify-content: center;
+}
+
+@media (width > 375px) {
+  main {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+  }
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
 }
