--- a/replica-figma/css/globals.css
+++ b/replica-figma/css/globals.css
@@ -15,12 +15,12 @@
   );
 
   --title-font-size: 20px;
+  --menu-font-size: 17px;
   --normal-font: 13px;
   --font-destacada: 11px;
   --text-color: #ededed;
   --secondary-text-color: #a0a0a0;
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -51,10 +51,19 @@ h2 {
 
 header {
   background-color: var(--surface-secondary);
-  width: 100vw;
+  width: 100%;
   padding: 10px 15px;
   border: 1px solid var(--border);
 
+  display: flex;
+  justify-content: center;
+
+  position: sticky;
+  top: 0;
+}
+
+.header-content {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -81,6 +90,35 @@ header {
   flex-direction: column;
   justify-content: center;
   gap: 8px;
+
+  position: relative;
+}
+
+.menu:hover .sub-list {
+  display: block;
+}
+
+.sub-list {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: -10%;
+  background-color: var(--surface);
+  color: var(--text-color);
+  list-style: none;
+  border: 1px solid var(--border);
+  border-radius: 5px;
+  width: 50vw;
+  padding: 10px;
+}
+
+.sub-list li {
+  padding: 7px;
+  font-size: var(--menu-font-size);
+}
+
+.sub-list li:hover {
+  background: var(--gradient-background);
 }
 
 .menu-line {
@@ -88,6 +126,22 @@ header {
   width: 100%;
   height: 3px;
   border-radius: 2px;
+}
+
+.nav-list {
+  list-style: none;
+  display: none;
+  gap: 13px;
+}
+
+.nav-list li {
+  padding: 5px;
+  color: var(--secondary-text-color);
+  cursor: pointer;
+}
+
+.nav-list li:hover {
+  color: var(--text-color);
 }
 
 button {
@@ -122,8 +176,24 @@ button {
   font-size: var(--normal-font);
 }
 
-.color-section {
+.primary-color-section {
   background: var(--gradient-background);
+  color: var(--text-color);
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  padding: 40px;
+  gap: 10px;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.secondary-color-section {
+  background-color: var(--secondary-color);
   color: var(--text-color);
   margin: 0 auto;
   margin-bottom: 20px;
@@ -140,4 +210,123 @@ button {
 .text-section p {
   margin-bottom: 20px;
   color: var(--secondary-text-color);
+}
+
+.benefits-section {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin: 10px 0 20px 0;
+}
+
+.benefits {
+  color: var(--text-color);
+  background-color: var(--surface-secondary);
+  border: 1px solid var(--border);
+  border-radius: 7px;
+  padding: 10px;
+}
+
+.team-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
+
+  margin: 10px 0 20px 0;
+}
+
+.team-section p {
+  color: var(--text-color);
+}
+
+.teammate {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avatar {
+  background-color: var(--surface-tertiary);
+  border: 1.9px solid var(--light-primary-color);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+}
+
+.technologies-section {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin: 10px 0 20px 0;
+}
+
+.technologies {
+  background-color: var(--surface-secondary);
+  width: 50px;
+  height: 50px;
+  color: var(--secondary-text-color);
+  font-size: var(--font-destacada);
+  border: 1px solid var(--border);
+  border-radius: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+@media (width > 375px) {
+  .header-content {
+    max-width: 1000px;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .nav-list {
+    display: flex;
+  }
+
+  .primary-color-section,
+  .secondary-color-section {
+    height: 200px;
+    max-width: 950px;
+  }
+
+  .container-media-query {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  .main-content {
+    width: 80%;
+    max-width: 500px;
+  }
+
+  .benefits-section {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .benefits {
+    width: 150px;
+    max-width: 200px;
+  }
+
+  .aside-content {
+    width: 20%;
+    text-align: center;
+  }
+
+  .team-section {
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+  }
 }
