--- a/javascript/asincronismo/practica2/style.css
+++ b/javascript/asincronismo/practica2/style.css
@@ -19,7 +19,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 30px;
+
+  width: 70%;
+  margin: 20px auto;
 }
 
 .character-card {
@@ -31,13 +34,21 @@ body {
 }
 
 .character-card img {
-  width: 100%;
+  width: auto;
   height: auto;
+  max-width: 200px;
+  max-height: 300px;
   border-radius: 8px;
+
+  transition: all 0.5s ease;
+}
+
+.character-card img:hover {
+  transform: scale(1.2);
 }
 
 #pagination-buttons {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 button {
